# SEbaBB3

./: .gitignore  .gitignore.txt  ReadMe.md
C++/21_12_2024/: CMakeLists.txt  main.cpp
C/AllegroTest/: flake.nix  hello.c
C/UE0/CompilerSteps/: HelloWorld  HelloWorld.i  HelloWorld.s
C/UE1/: hello_arg.c  printf1.c
C/UE1/lib/: lib.h
C/UE2/: array.c  callByRef.c  conversion.c  cursed.c  stringTest.c
C/UE2/lib/: date.c  date.h
C/UE3/: CMakeLists.txt  Makefile_manual  lib.c  lib.h  printf1.c
C/UE4/: CMakeLists.txt
C/UE4/list/: list.c  list.h  main.c
C/UE4/pointers/: pointers.c  utils.h
C/UE4/preprocessor/: preproc.c
C/UE4/union/: union.c
CNW/: CMakeLists.txt
CNW/socket1/: WordCheck.c  WordCheck.h  client.c  client_poll.c  comm.c  comm.h  forkserver.c  main.c  server.c
DES/: Nationalrat.plantuml  soccer.plantuml
DES/Beladung vollständig/: sakila-drop.sql
DES/Beladung von DEMO/: !Vorbereitung DEMO-User.sql  sakila-create-3.sql  sakila-drop.sql  sakila-insert-from-DEMO.sql
DES/HR-Datenbank/: Analytische_Funktionen.sql  HR_CREATE.sql  HR_DROP.sql  HR_INSERT.sql  Pivot_Unpivot.sql
DES/UE1/: UE1_1_1.plantuml  UE1_1_2.plantuml  UE1_1_3.plantuml  UE1_1_4.plantuml  UE1_2.plantuml  UE1_2.sql  UE1_3.plantuml
DES/UE1/latex/: main.tex
DES/UE2/: ue2_2.sql  ue2_3.sql  ue2_4.sql  ue2_5.sql  ue2_6.sql
DES/UE2/latex/: main.tex
DES/UE3/: ue3_1.sql  ue3_2.sql  ue3_3.sql  ue3_4.sql  ue3_5.sql  ue3_6.sql
DES/UE3/latex/: main.tex
DES/UE4/: ue4_1.sql  ue4_2.sql  ue4_3.sql  ue4_3_3.sql
DES/UE4/latex/: main.tex
DES/UE5/: ue5_1_1.sql  ue5_1_2.sql  ue5_1_3.sql  ue5_1_4.sql  ue5_2.sql  ue5_2_1.sql  ue5_2_2.sql  ue5_2_3.sql  ue5_3_1.sql  ue5_3_2.sql
DES/UE5/latex/: main.tex
DES/UE6/: ue6_4.sql  ue6_5.sql
DES/UE6/latex/: main.tex
DES/plsql/: 01_plsql_basics.sql  02_Stored_Proc_Func_Package.sql  03_PerformanceTest.sql  04_Cursor.sql  05_Function_FizzBuzz.sql  05_Stored_Proc_Func_Package.sql  06_Auswirkungen_Exceptions.sql  06_Exceptions.sql  07_Pipelined_Table_Functions.sql
DES/transaction/: 03_AccessControl.sql  04_Implizites_Sperren.sql  04_Implizites_Sperren_S1.sql  04_Implizites_Sperren_S2.sql  05_Explizites_Sperren_Teil1.sql  serialize.md
DES/trigger/: 00_Constraints.sql  00a_Constraints_HenneEi.sql  01_Trigger_commented.sql  01b_Trigger_examples.sql  02_Constraints_Deferrable.sql  02_Instead_of_Trigger.sql  02b_Instead_of_Trigger_emp_dept.sql  03_Mutating_Table.sql  04_Compound_Trigger.sql  04_Compound_Trigger_intro.sql  04_b_compound_trigger.sql  05_Silent_Rollbacks.sql
MAS/Skript/: main.tex
Notes/: Datenbanken.md  Mathe.md  Netzwerktechnik.md  Projektmanagement.md  Software.md
TemplateNixShell/: flake.nix
WDP/UE1/: about.html  contact.html  create.html  index.html  style.css
WDP/UE2/: contact.html  flow-example.html  index.html  layout_flow.css  style.css
WDP/UE3/: about.html  flex_example.html  index.html  layout_flex.css  layout_float.css
WDP/UE4/: index.html  optimizer.js  styles.css
WDP/UE5/: Dockerfile  api.mjs  app.js  compose.yaml  flake.nix  index.html  package-lock.json  package.json  style.css
WDP/UE6/: index.html  paint.js  shapes.js  style.css
